Remove duplicate Rouge 1.x testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ rvm:
 matrix:
   include:
     - rvm: *ruby1
-      env: TEST_SUITE=test ROUGE=1.11.1
+      env: TEST_SUITE=test
     - rvm: *ruby1
       env: TEST_SUITE=fmt
     - rvm: *ruby1
